# airbnb-frontend

./: package-lock.json  package.json  pyproject.toml
src/: api.ts  index.tsx  router.tsx  types.d.ts
src/components/: Header.tsx  LoginModal.tsx  Room.tsx  Root.tsx  SocialLogin.tsx
src/lib/: useUser.ts
src/routes/: GithubConfirm.tsx  Home.tsx  NotFound.tsx  RoomDetail.tsx  UploadPhotos.tsx  UploadRoom.tsx
