[tool.poetry]
name = "airbnb-clone-frontend"
version = "0.1.0"
description = ""
authors = ["3o14 <dldnjswn4265@gmail.com>"]
readme = "README.md"
packages = [{include = "airbnb_clone_frontend"}]

[tool.poetry.dependencies]
python = "^3.11"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
